Fix Windows taskbar: pin/click works for transparent stage
The primary stage uses StageStyle.TRANSPARENT, which on Windows
defaults to WS_EX_LAYERED without WS_EX_APPWINDOW — so the taskbar
either skips the icon or won't accept pin/click-to-focus reliably.

Two-part fix, both Windows-only no-ops elsewhere:
- WindowsNativeUtils.setAppUserModelID(): called in Launcher.main
  before any window is shown, so Windows groups all running Xenon
  windows under one taskbar entry instead of merging with generic
  "Java(TM) Platform" processes.
- WindowsNativeUtils.ensureTaskbarVisible(): called after
  primaryStage.show(). Looks up the HWND via FindWindowW (the
  reflection path through com.sun.javafx.tk fails on JavaFX 25
  with "module javafx.graphics does not open javafx.stage"), then
  ORs WS_EX_APPWINDOW into the extended style and clears
  WS_EX_TOOLWINDOW.

Verified locally: log shows "Applied WS_EX_APPWINDOW to taskbar
stage (was=0x80000, now=0xc0000)" and the icon shows up in the
taskbar with click-to-focus working.

JNA bindings are minimal (Native.load("user32"/"shell32") with
hand-rolled signatures) so we don't need jna-platform on the
classpath.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>